[gd_scene load_steps=29 format=2]

[ext_resource path="res://scenes/levels/gameStartButton.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/gameOptions.gd" type="Script" id=2]
[ext_resource path="res://img/desert_option.png" type="Texture" id=3]
[ext_resource path="res://img/volcano_option_selected.png" type="Texture" id=4]
[ext_resource path="res://img/mountain_option.png" type="Texture" id=5]
[ext_resource path="res://img/tower_option.png" type="Texture" id=6]
[ext_resource path="res://img/volcano_option.png" type="Texture" id=7]
[ext_resource path="res://map_selector.tres" type="ButtonGroup" id=8]
[ext_resource path="res://img/desert_option_selected.png" type="Texture" id=9]
[ext_resource path="res://img/tower_option_selected.png" type="Texture" id=10]
[ext_resource path="res://img/mountain_option_selected.png" type="Texture" id=11]
[ext_resource path="res://img/game_difficulty.png" type="Texture" id=12]
[ext_resource path="res://img/map_selector.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0627451, 0.411765, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.027451, 0.415686, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=5]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 224, 46 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 308, 307 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 308, 307 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 326, 326 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 326, 326 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 307, 326 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 307, 326 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 326, 307 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 326, 307 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 179, 43 )

[node name="gameOptions" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 1.99994
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 641.0
color = Color( 0.980392, 0.980392, 0.980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Difficulty" type="MenuButton" parent="."]
margin_left = 802.241
margin_top = 413.161
margin_right = 1002.24
margin_bottom = 453.161
focus_mode = 2
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Normal"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 824.0
margin_top = 497.081
margin_right = 1000.0
margin_bottom = 592.081
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "START"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="TextEdit" parent="."]
margin_left = 836.439
margin_top = 340.906
margin_right = 973.439
margin_bottom = 388.906
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volcano" type="Button" parent="."]
margin_left = 538.211
margin_top = 6.43752
margin_right = 858.211
margin_bottom = 319.438
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
toggle_mode = true
group = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desert" type="Button" parent="."]
margin_left = 161.703
margin_top = 4.29054
margin_right = 499.703
margin_bottom = 336.291
grow_horizontal = 2
grow_vertical = 2
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
toggle_mode = true
pressed = true
action_mode = 0
group = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mountain" type="Button" parent="."]
margin_left = 456.012
margin_top = 309.823
margin_right = 777.012
margin_bottom = 624.823
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
toggle_mode = true
group = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower" type="Button" parent="."]
margin_left = 59.294
margin_top = 308.506
margin_right = 397.294
margin_bottom = 621.506
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
toggle_mode = true
group = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 10.0
margin_top = 113.0
margin_right = 159.0
margin_bottom = 168.0
custom_styles/normal = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="Volcano" to="." method="_on_Volcano_toggled"]
[connection signal="toggled" from="Desert" to="." method="_on_Desert_toggled"]
[connection signal="toggled" from="Mountain" to="." method="_on_Mountain_toggled"]
[connection signal="toggled" from="Tower" to="." method="_on_Tower_toggled"]
